# aktos-collection-agency

./: .coveragerc  .gitignore  Procfile  README.md  manage.py  pyproject.toml  run_tests_with_coverage.sh
accounts/: admin.py  models.py  pagination.py  serializers.py  services.py  test_runner.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: __init__.py  test_api.py
accounts/tests/api/: __init__.py  test_account_api.py
accounts/tests/models/: __init__.py  test_account.py  test_client.py  test_collection_agency.py  test_consumer.py
accounts/tests/services/: __init__.py  test_csv_import.py
collection_agency/: asgi.py  settings.py  urls.py  wsgi.py
docs/: implementation_plan.md  take_home.txt
